--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,8 @@ html,body {
         float: left;
         border-radius: 50px;
         margin-right: 30px;
-        width: 300px;
+        width: 200px;
+        height: 150px;
         margin-bottom: 20px;
     }
 
