--- a/css/styles.css
+++ b/css/styles.css
@@ -113,16 +113,15 @@ html,body {
     }
     
     .main {
-    
-    
     animation-name:conteudo;
     animation-duration: 2s;
-
+    margin-left: 30px;
 }
 
     .cv-pic {
     float: left;
-    border-radius: 0px;
+    border-radius
+    : 0px;
     margin-right: 30px;
     width: 300px;
     margin-bottom: 20px;
@@ -145,9 +144,6 @@ html,body {
     margin-top: 40px;
     }
     
-    
-    
-    
     .main h3 {
     font-size: 12px;
     color: #0f7bf7;
@@ -166,35 +162,33 @@ html,body {
     list-style: none;
     padding-left: 0;
     color: grey;
-    
-    
     }
-    
+
     .caminho a {
     color: gray;
     }
+
     .caminho li {
     display: inline-block;
     font-family:Arial, Helvetica, monospace;
     }
     
     .gitlg {
-
     width: 40px;
     border-radius: 50%;
     }
+
     .social-img {
     width: 30px;
+    }   
+
+    .buttomVoltar {
+    color: #656565;
+    position: relative;
+    cursor: pointer;
     }
-    
-    .back-link {
-    color: #0f7bf7;
-    }
-    
-   
-    
+
      .dodo {
-    
         float: left;
         border-radius: 50px;
         margin-right: 30px;
@@ -260,12 +254,7 @@ html,body {
     margin-left: 20px;
     margin-right: 20px;
     }
-    
-    .main {
-    
-    
-    
-    }
+
     
     main p {
     text-align: left;
